--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ configurations {
 ext {
     grailsVersion = '2.4.1.BUILD-SNAPSHOT'
     groovyVersion = '2.3.2'
-    datastoreVersion = '3.1.0.RELEASE'
+    datastoreVersion = '3.1.1.BUILD-SNAPSHOT'
 }
 
 group = 'org.grails'
@@ -24,7 +24,13 @@ repositories {
 }
 
 dependencies {
+    testCompile "junit:junit:4.11"
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0", {
+        transitive = false
+    }
     provided "org.codehaus.groovy:groovy-all:$groovyVersion"
+    provided "org.grails:grails-core:$grailsVersion"
+    provided "org.grails:grails-bootstrap:$grailsVersion"
     provided "org.grails:grails-plugin-testing:$grailsVersion"
     provided "org.grails:grails-datastore-gorm:$datastoreVersion"
     provided "org.grails:grails-datastore-gorm-hibernate4:$datastoreVersion"
@@ -36,7 +42,8 @@ dependencies {
 }
 
 sourceSets.main.compileClasspath += configurations.provided
-sourceSets.test.compileClasspath += configurations.provided
+sourceSets.test.compileClasspath = configurations.provided + sourceSets.test.compileClasspath
+sourceSets.test.runtimeClasspath = configurations.provided + sourceSets.test.runtimeClasspath
 javadoc.classpath += configurations.provided
 
 idea {
