--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ configurations {
 }
 
 ext {
-    grailsVersion = '2.4.1.BUILD-SNAPSHOT'
-    groovyVersion = '2.3.2'
+    grailsVersion = '2.4.3.BUILD-SNAPSHOT'
+    groovyVersion = '2.3.4'
     datastoreVersion = '3.1.1.RELEASE'
+    springVersion = '4.0.6.RELEASE'
 }
 
 group = 'org.grails'
-version = "1.0-grails-2.4"
+version = "1.0.1-grails-2.4-SNAPSHOT"
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
@@ -37,7 +38,7 @@ dependencies {
     provided "org.grails:grails-datastore-core:$datastoreVersion"
     provided "javax.servlet:javax.servlet-api:3.0.1"
     provided "junit:junit:4.11"
-    provided "org.springframework:spring-orm:4.0.5.RELEASE"
+    provided "org.springframework:spring-orm:$springVersion"
     provided "com.h2database:h2:1.3.173"
 }
 
