--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     grailsVersion = '2.3.11'
     groovyVersion = '2.1.9'
     datastoreVersion = '3.1.2.BUILD-SNAPSHOT'
+    gormMongoVersion = '3.0.2.BUILD-SNAPSHOT'
     springVersion = '3.2.9.RELEASE'
 }
 
@@ -29,6 +30,7 @@ dependencies {
     provided "org.grails:grails-plugin-testing:$grailsVersion"
     provided "org.grails:grails-datastore-gorm:$datastoreVersion"
     provided "org.grails:grails-datastore-gorm-hibernate4:$datastoreVersion"
+    provided "org.grails:grails-datastore-gorm-mongodb:$gormMongoVersion"
     provided "org.grails:grails-datastore-core:$datastoreVersion"
     provided "javax.servlet:javax.servlet-api:3.0.1"
     provided "org.springframework:spring-orm:$springVersion"
