--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     provided "junit:junit:4.11"
     provided "org.springframework:spring-orm:$springVersion"
     provided "com.h2database:h2:1.3.173"
+    provided "com.github.fakemongo:fongo:1.5.4"
 }
 
 sourceSets.main.compileClasspath += configurations.provided
