set version to 1.0.1-grails-2.4

--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,15 @@ configurations {
 }
 
 ext {
-    grailsVersion = '2.4.3.BUILD-SNAPSHOT'
-    groovyVersion = '2.3.4'
-    datastoreVersion = '3.1.1.RELEASE'
+    grailsVersion = '2.4.3'
+    groovyVersion = '2.3.6'
+    datastoreVersion = '3.1.2.RELEASE'
     gormMongoVersion = '3.0.2.BUILD-SNAPSHOT'
     springVersion = '4.0.6.RELEASE'
 }
 
 group = 'org.grails'
-version = "1.0.1-grails-2.4-SNAPSHOT"
+version = "1.0.1-grails-2.4"
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
