--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,13 @@ configurations {
 ext {
     grailsVersion = '2.3.11'
     groovyVersion = '2.1.9'
-    datastoreVersion = '3.1.2.BUILD-SNAPSHOT'
+    datastoreVersion = '3.1.2.RELEASE'
     gormMongoVersion = '3.0.2.BUILD-SNAPSHOT'
     springVersion = '3.2.9.RELEASE'
 }
 
 group = 'org.grails'
-version = "1.0.1-grails-2.3-SNAPSHOT"
+version = "1.0.1-grails-2.3"
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
