--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ ext {
     grailsVersion = '2.4.3'
     groovyVersion = '2.3.6'
     datastoreVersion = '3.1.2.RELEASE'
-    gormMongoVersion = '3.0.2.BUILD-SNAPSHOT'
+    gormMongoVersion = '3.0.2.RELEASE'
     springVersion = '4.0.6.RELEASE'
 }
 
