--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ ext {
     grailsVersion = '2.3.11'
     groovyVersion = '2.1.9'
     datastoreVersion = '3.1.2.RELEASE'
-    gormMongoVersion = '3.0.2.BUILD-SNAPSHOT'
+    gormMongoVersion = '3.0.2.RELEASE'
     springVersion = '3.2.9.RELEASE'
 }
 
