--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ ext {
 }
 
 group = 'org.grails'
-version = "1.0.1-grails-2.4"
+version = "1.0.2-grails-2.4-SNAPSHOT"
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
