--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,12 @@ dependencies {
     provided "org.springframework:spring-orm:$springVersion"
     provided "com.h2database:h2:1.3.173"
     provided "com.github.fakemongo:fongo:1.5.4"
+
+    testRuntime "org.hibernate:hibernate-ehcache:4.3.5.Final", {
+        exclude group: 'net.sf.ehcache', module: 'ehcache-core'
+        exclude group: 'org.jboss.logging', module:'jboss-logging-annotations'
+    }
+    testRuntime "net.sf.ehcache:ehcache-core:2.4.8"
 }
 
 sourceSets.main.compileClasspath += [configurations.provided]
