--- a/test-apps/HibernateTestMixinApp/application.properties
+++ b/test-apps/HibernateTestMixinApp/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Thu Jul 17 17:12:57 EEST 2014
-app.grails.version=2.4.3.BUILD-SNAPSHOT
+app.grails.version=2.4.3
 app.name=HibernateTestMixinApp
 app.version=0.1
