--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,17 @@ apply plugin: 'idea'
 repositories {
     mavenLocal()
     jcenter()
-    mavenCentral()
+    maven { url "https://repo.grails.org/grails/libs-snapshots-local" }
 }
 
 dependencies {
+    testCompile "junit:junit:4.11"
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0", {
+        transitive = false
+    }
     provided "org.codehaus.groovy:groovy-all:$groovyVersion"
+    provided "org.grails:grails-core:$grailsVersion"
+    provided "org.grails:grails-bootstrap:$grailsVersion"
     provided "org.grails:grails-plugin-testing:$grailsVersion"
     provided "org.grails:grails-datastore-gorm:$datastoreVersion"
     provided "org.grails:grails-datastore-gorm-hibernate4:$datastoreVersion"
@@ -36,23 +42,32 @@ dependencies {
     provided "javax.servlet:javax.servlet-api:3.0.1"
     provided "org.springframework:spring-orm:$springVersion"
     provided "junit:junit:4.11"
+    provided "com.github.fakemongo:fongo:1.5.4"
+    provided "com.h2database:h2:1.3.173"
+
+    testRuntime "org.hibernate:hibernate-ehcache:4.3.5.Final", {
+        exclude group: 'net.sf.ehcache', module: 'ehcache-core'
+        exclude group: 'org.jboss.logging', module:'jboss-logging-annotations'
+    }
+    testRuntime "net.sf.ehcache:ehcache-core:2.4.8"
 }
 
-sourceSets.main.compileClasspath += configurations.provided
-sourceSets.test.compileClasspath += configurations.provided
-javadoc.classpath += configurations.provided
+sourceSets.main.compileClasspath += [configurations.provided]
+sourceSets.test.compileClasspath = configurations.provided + sourceSets.test.compileClasspath
+sourceSets.test.runtimeClasspath = configurations.provided + sourceSets.test.runtimeClasspath
+javadoc.classpath += [configurations.provided]
 
 idea {
   module{
-    scopes.PROVIDED.plus += configurations.provided
+    scopes.PROVIDED.plus += [configurations.provided]
   }
 }
 eclipse {
   classpath {
-    plusConfigurations += configurations.provided
+    plusConfigurations += [configurations.provided]
   }
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.0'
+    gradleVersion = '2.1'
 }
